Fixing overflow and scroll issues in mobile

--- a/public/styles/ShiftsList.scss
+++ b/public/styles/ShiftsList.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .shiftsList-enter {
